Remove Vuesax, Add Vuetify

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Vuetify
+@import '~vuetify/dist/vuetify.min.css';
+
+// Material Design Icons
+@import '~@mdi/font/css/materialdesignicons.min.css';
+
 // FontAwesome
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/brands';
