--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,7 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #004e6f;
+$blue: #072e4d;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
@@ -15,5 +15,5 @@ $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
-$teal: #00dbdf;
-$cyan: #00dbdf;
+$teal: #33bdc0;
+$cyan: #33bdc0;
